// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`indented-delimiter-row.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
| a | b |
        | - | - |
| 1 | 2 |

foo
    | a | b |
    | - | - |

a | b
    --- | ---

| a | b |
      | :-- | --: |
| 1 | 2 |

| a | b |
    - | -

foo | bar
baz | qux

=====================================output=====================================
| a | b | | - | - | | 1 | 2 |

foo | a | b | | - | - |

a | b --- | ---

| a | b | | :-- | --: | | 1 | 2 |

| a | b | - | -

foo | bar baz | qux

================================================================================
`;

exports[`indented-delimiter-row.md - {"proseWrap":"never"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "never"
                                                      printWidth: 80 (default) |
=====================================input======================================
| a | b |
        | - | - |
| 1 | 2 |

foo
    | a | b |
    | - | - |

a | b
    --- | ---

| a | b |
      | :-- | --: |
| 1 | 2 |

| a | b |
    - | -

foo | bar
baz | qux

=====================================output=====================================
| a | b | | - | - | | 1 | 2 |

foo | a | b | | - | - |

a | b --- | ---

| a | b | | :-- | --: | | 1 | 2 |

| a | b | - | -

foo | bar baz | qux

================================================================================
`;

exports[`indented-delimiter-row.md - {"proseWrap":"preserve"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "preserve"
                                                      printWidth: 80 (default) |
=====================================input======================================
| a | b |
        | - | - |
| 1 | 2 |

foo
    | a | b |
    | - | - |

a | b
    --- | ---

| a | b |
      | :-- | --: |
| 1 | 2 |

| a | b |
    - | -

foo | bar
baz | qux

=====================================output=====================================
| a | b |
\\| - | - |
| 1 | 2 |

foo
| a | b |
\\| - | - |

a | b
\\--- | ---

| a | b |
\\| :-- | --: |
| 1 | 2 |

| a | b | - | -

foo | bar
baz | qux

================================================================================
`;

exports[`indented-delimiter-row.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
                                                      printWidth: 80 (default) |
=====================================input======================================
| a | b |
        | - | - |
| 1 | 2 |

foo
    | a | b |
    | - | - |

a | b
    --- | ---

| a | b |
      | :-- | --: |
| 1 | 2 |

| a | b |
    - | -

foo | bar
baz | qux

=====================================output=====================================
| a | b |
\\| - | - |
| 1 | 2 |

foo
| a | b |
\\| - | - |

a | b
\\--- | ---

| a | b |
\\| :-- | --: |
| 1 | 2 |

| a | b | - | -

foo | bar
baz | qux

================================================================================
`;
